# Neuro-Net-DLL

./: .gitignore  AGENTS.MD  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.MD  Doxyfile  LICENSE  Neuro Net DLL.sln  README.md  TODO.MD  neuronet.cpp  test_matrix.py
.github/workflows/: cmake.yml  release_workflow.yml
.jules/: bolt.md
Neuro Net DLL/: Neuro Net DLL.vcxproj  neuronet.cpp  neuronet.h
Neuro Net Includes/: Neuro Net Includes.vcxproj
docs/modules/: json_utilities.md  math.md  neural_network.md  optimization.md  transformer.md
examples/: basic_usage_export.cpp  benchmark_astar.cpp  transformer_usage.cpp
includes/: Neuro Net Includes.vcxproj  matrix.h  matrix.inl
src/: Neuro Net DLL.vcxproj  Neuro Net DLL.vcxproj.filters  dllmain.cpp  genetic_algorithm.cpp  genetic_algorithm.h  matrix.h  neuronet.cpp  neuronet.h
src/classifier/: naive_bayes.cpp  naive_bayes.h
src/math/: extended_matrix_ops.cpp  extended_matrix_ops.h  gaussian_distribution.cpp  gaussian_distribution.h  least_squares.cpp  least_squares.h  matrix.h
src/neural_network/: lstm_layer.cpp  lstm_layer.h  neuronet.cpp  neuronet.h  rnn_layer.cpp  rnn_layer.h
src/optimization/: astar_path_node.h  genetic_algorithm.cpp  genetic_algorithm.h  neural_pathfinder.cpp  neural_pathfinder.h  training_metrics.h
src/python_bindings/: pyneuronet.cpp
src/transformer/: attention.cpp  attention.h  embedding.cpp  embedding.h  multi_head_attention.cpp  multi_head_attention.h  positional_encoding.cpp  positional_encoding.h  transformer_decoder_layer.cpp  transformer_decoder_layer.h  transformer_encoder_decoder_model.cpp  transformer_encoder_decoder_model.h  transformer_encoder_layer.cpp  transformer_encoder_layer.h  transformer_ffn.cpp  transformer_ffn.h  transformer_model.cpp  transformer_model.h
src/utilities/: dataset_loader.cpp  dataset_loader.h  logger.cpp  logger.h  timer.cpp  timer.h  vocabulary.cpp  vocabulary.h
src/utilities/json/: json.cpp  json.hpp  json_exception.hpp
tests/: CMakeLists.txt  test_benchmarks.cpp  test_dataset_loader.cpp  test_extended_matrix_ops.cpp  test_gaussian_distribution.cpp  test_genetic_algorithm.cpp  test_json.cpp  test_least_squares.cpp  test_logger.cpp  test_lstm_layer.cpp  test_naive_bayes.cpp  test_neural_pathfinder.cpp  test_neuronet.cpp  test_pyneuronet.py  test_rnn_layer.cpp  test_timer.cpp  test_transformer_encoder_decoder.cpp  test_transformer_model.cpp  test_vocabulary.cpp
